--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "tuioServer",
-  "version": "1.0.0",
-  "author": "WaterTian",
+  "name": "tuio-Server",
+  "version": "0.0.1",
+  "author": "WaterTian <changewater@qq.com>",
   "main": "src/Tuio.js",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/nomve/Tuio.js"
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "license": "MIT",
   "dependencies": {
     "ws": "~0.8.0"
-  },
-  "devDependencies": {}
+  }
 }
